# ax

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  a.py  alphabet.out  api_doc.md  generate.py  j.py  package-lock.json  stats.py  t.py  test.html  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  test.yml  website.yml
example/: package-lock.json  package.json  vite.config.ts
example/src/components/: Initial.vue
examples/programs/: .gitignore  Makefile
examples/programs/alphabet/: Makefile  alphabet.s
examples/programs/argc/: Makefile  argc.S
examples/programs/args/: Makefile  args.S
examples/programs/c_loop/: Makefile  c_loop.c
examples/programs/exit/: Makefile  exit_code.s
examples/programs/exit_c/: Makefile  exit_c.c
examples/programs/fib/: Makefile  fib.c
examples/programs/fib_c_nostdlib/: Makefile  fib_c_nostdlib.c
examples/programs/hello_c/: Makefile  hello_c.c
examples/programs/hello_world/: Makefile  hello_world.s
examples/programs/hello_world_c_nostdlib/: Makefile  hello_world_c_nostdlib.c
examples/programs/hex/: Makefile  hex_naive.s
examples/programs/hex_c_nostdlib/: Makefile  hex_c_nostdlib.c
examples/programs/printf/: Makefile  printf.c
examples/programs/read_c/: Makefile  read_c.c
examples/programs/strlen/: Makefile  strlen.s
examples/programs/thread_local_c/: Makefile  thread_local.c
examples/programs/trace/: Makefile  trace.S
examples/programs/uppercase/: Makefile  uppercase_naive.s
examples/simple_web/: index.html
examples/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/web/src/: App.vue
examples/web/src/assets/: main.css
examples/web/src/components/: Demo.vue  Initial.vue  Terminal.vue
js/docs/: index.ts  package-lock.json  package.json  tsconfig.json
js/test/: js.test.ts  package-lock.json  package.json  vite.config.ts
js_test/: js.test.ts  package-lock.json  package.json
src/: axecutor.rs  bin.rs  build.rs  functions.rs  lib.rs  version_info.rs
src/auto/: generated.rs
src/elf/: elf.rs  mod.rs
src/helpers/: debug.rs  errors.rs  macros.rs  mod.rs  operand.rs  stack.rs  syscalls.rs  tests.rs  trace.rs
src/instructions/: adc.rs  add.rs  and.rs  axecutor.rs  call.rs  cdq.rs  cdqe.rs  cld.rs  cmovae.rs  cmovbe.rs  cmove.rs  cmovne.rs  cmp.rs  cpuid.rs  cqo.rs  cwd.rs  debug.rs  dec.rs  div.rs  elf.rs  endbr64.rs  errors.rs  execute.rs  flags.rs  generated.rs  hooks.rs  idiv.rs  imul.rs  inc.rs  int.rs  int1.rs  int3.rs  integration_tests.rs  ja.rs  jae.rs  jb.rs  jbe.rs  jcxz.rs  je.rs  jecxz.rs  (+46 more)
src/state/: execute.rs  flags.rs  hooks.rs  memory.rs  mod.rs  registers.rs
testdata/: string_reverse.S
