[package]
name = "ax"
version = "0.1.0"
authors = ["xarantolus <xarantolus@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
lazy_static = "1.4.0"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.7", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.144"
serde-wasm-bindgen = "0.4"

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "nasm", "instr_info", "serde"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
smol = "1.2.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
