[package]
name = "ax-x86"
version = "0.3.2"
authors = ["xarantolus <xarantolus@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
homepage = "https://ax.010.one"
repository = "https://github.com/xarantolus/ax"
description = "x86 emulator for running simple binaries in your browser"
keywords = ["x86", "emulator", "wasm", "webassembly", "browser", "asm", "assembly", "elf"]
readme = "README.md"
build = "src/build.rs"


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ax"
path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
lazy_static = "1.4.0"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.7", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.144"
serde-wasm-bindgen = "0.4"
elf_rs = "0.2.0"

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = ["std", "decoder", "nasm", "instr_info", "serde"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
async-std = "1.12.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
